<resources>
    <string name="app_name">test</string>
    <string name="title_text">Sign Up</string>
    <string name="title_text2">Log In</string>
    <string name="Submit">Submit</string>
    <string name="Login">Already have an account?</string>
    <string name="Signup">Don\'t have an account?</string>
    <string name="subtitle">to create an account</string>
    <string name="subtitle2">to continue</string>
    <string name="Fullname">Full name</string>
    <string name="Email">Email</string>
    <string name="Gender">Gender</string>
    <string name="Date">Date</string>
    <string name="SelectBirthdate">Select Birthdate</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Show_Password">Show Password</string>
    <string name="Show_confirm_password">Show Confirm Password</string>
    <string name="team_description">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
    </string>
    <string name="mira_description">I’ll be handling the UI design of our project, with my main focus on front-end development. At the same time, I’ll also be supporting the back-end side whenever needed so our system works smoothly as one. On top of that, I manage the group to keep us on track, organized, and moving forward as a team.</string>
    <string name="sam_description">I also assist in applying the planned UI and front-end design based on our UI designer, as as giving additional suggestions to help make our application\'s interface more user friendly. As well as providing functionalities for each page in our application both for proper functionalities and for the user\'s experiencing in using our application.</string>
    <string name="nathan_description">I apply the planned UI to the application and support adjustments to the design for user experience improvements, as well as add animations to make our work livelier and more creative. I also work on the back end of the application, providing functionality to its elements.</string>
    <string name="jep_description">I am one of the backend programmers of this team. I am dedicated to provide a smooth and organized collaboration with my peers and collaborators. Lorem ipsum kenemerut kenemerut test.</string>
</resources>